--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Serve Data to Clients Drill 1",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "Michael Schreier",
   "license": "ISC",
